# ORM-SQLAlchemy-and-Duckdb

./: pyproject.toml
